[tool.poetry]
name = "long-exposure"
version = "0.1.0"
description = ""
authors = ["Seth Itow <11025699+sethitow@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numba = "^0.51.2"
scikit-video = "^1.1.11"
scikit-image = "^0.17.2"
tqdm = "^4.51.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
